# mgui

./: .gitignore  CMakeLists.txt  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: CMakeLists.txt  Makefile.am  Makefile.in  ilixi_mgui_config.xml
data/images/: CMakeLists.txt  Makefile.am  Makefile.in  iconpack.dfiff
data/theme/: CMakeLists.txt  IconPack.xml  Makefile.am  Makefile.in  bg.dfiff  fonts_en_US.xml  iconpack.dfiff  style.xml
src/: BTIcon.cpp  BTIcon.h  BatteryIcon.cpp  BatteryIcon.h  BottomBar.cpp  CMakeLists.txt  CellularIcon.cpp  CellularIcon.h  Defines.h  GPSIcon.h  MGuiApplication.cpp  MGuiApplication.h  MGuiPlatform.h  MGuiRil.cpp  MGuiRil.h  Makefile.am  Makefile.in  SDCardIcon.cpp  SDCardIcon.h  SimIcon.cpp  SimpleIcon.cpp  SimpleIcon.h  StatusBar.cpp  StatusBar.h  UBusSubscriber.cpp  UBusSubscriber.h  UBusThread.cpp  UBusThread.h  main.cpp
src/platform/pxa1826/: ChargerRequest.cpp  ChargerRequest.h  HawkRequest.cpp  HawkRequest.h  MGuiCharger.cpp  MGuiCharger.h  MGuiHawk.cpp  MGuiHawk.h  MGuiRil.cpp  MGuiRil.h  MGuiStats.cpp  MGuiStats.h  MGuiWifi.cpp  MGuiWifi.h  OnkeyThread.cpp  OnkeyThread.h  RilRequest.cpp  RilRequest.h  StatsRequest.cpp  StatsRequest.h  UBusClient.cpp  UBusClient.h  UBusRequest.cpp  UBusRequest.h  UBusThread.cpp  UBusThread.h  WifiRequest.cpp  WifiRequest.h
src/ui/: BottomBar.cpp  BottomBar.h  CellularIcon.cpp  CellularTechIcon.cpp  CellularTechIcon.h  GPSIcon.cpp  HawkScreen.cpp  HawkScreen.h  HomeScreen.cpp  HomeScreen.h  MGuiApplication.cpp  MGuiApplication.h  SDCardIcon.cpp  SDCardIcon.h  ScreenBase.cpp  ScreenBase.h  SimIcon.h  SimpleIcon.h  StatScreen.cpp  StatScreen.h  StatusBar.cpp  StatusBar.h  WiFiIcon.cpp  WiFiIcon.h
